# arrow-compile-compute

./: .gitignore  AGENTS.md  Cargo.toml  README.md  inventory.md
.github/workflows/: rust.yml
.zed/: settings.json
benches/: agg_bench.rs  aggregate_bench.rs  bitmap_bench.rs  bounds_bench.rs  cast_bench.rs  compile_bench.rs  concat_bench.rs  dsl_bench.rs  eq_const_bench.rs  filter_bench.rs  hash_bench.rs  lognull_bench.rs  matrix_bench.rs  neg_bench.rs  parallel_bench.rs  report.py  sort_bench.rs  string_proto.rs  take_bench.rs  take_fsl_bool_bench.rs  vec_bench.rs
docs/: index.html
src/: aggregate.rs  arrow_interface.rs  bitmap.rs  compute_funcs.rs  dict.rs  lib.rs  llvm_debug.rs  new_arrow_interface.rs  new_iter.rs  primitive.rs  runend.rs  scalar.rs  string.rs
src/compiled_iter/: bitmap.rs  dictionary.rs  fixed_size_list.rs  list.rs  mod.rs  primitive.rs  reset_tests.rs  runend.rs  scalar.rs  setbit.rs  string.rs  view.rs
src/compiled_kernels/: apply.rs  arith.rs  bounds.rs  cast.rs  cmp.rs  concat.rs  dsl.rs  error_types.rs  filter.rs  ht.rs  interleave.rs  list_len.rs  llvm_utils.rs  mod.rs  null_utils.rs  partition.rs  range.rs  reduction.rs  rust_iter.rs  sort.rs  sort_norm.rs  string.rs  take.rs  vec.rs
src/compiled_kernels/aggregate/: count.rs  minmax.rs  mod.rs  most_recent.rs  sum.rs
src/compiled_kernels/aggregate2/: count.rs  minmax.rs  mod.rs  most_recent.rs  product.rs  sum.rs
src/compiled_kernels/dsl/: context.rs  errors.rs  expressions.rs  kernels.rs  mod.rs  string_funcs.rs  tests.rs  types.rs
src/compiled_kernels/dsl2/: buffer.rs  compiler.rs  examples.txt  mod.rs  reduce.rs  resolver.rs  runtime.rs  string_codegen.rs  two_d.rs  vectorize.rs  writers.rs
src/compiled_kernels/writers/: array_writer.rs  bool_writer.rs  dict_writer.rs  mod.rs  ree_writer.rs  str_writer.rs  view_writer.rs
src/compiled_writers/: array_writer.rs  bool_writer.rs  boolean_writer.rs  dict_writer.rs  dictionary_writer.rs  fixed_size_list_writer.rs  list_writer.rs  mod.rs  primitive_writer.rs  ree_writer.rs  run_end_writer.rs  str_writer.rs  string_writer.rs  view_writer.rs
src/compiled_writers2/: boolean_writer.rs  dictionary_writer.rs  fixed_size_list_writer.rs  list_writer.rs  mod.rs  primitive_writer.rs  run_end_writer.rs  string_writer.rs  view_writer.rs
src/new_iter/: bitmap.rs  dictionary.rs  mod.rs  primitive.rs  runend.rs  scalar.rs  setbit.rs  string.rs  view.rs
src/new_kernels/: apply.rs  arith.rs  cast.rs  cmp.rs  concat.rs  dsl.rs  filter.rs  ht.rs  llvm_utils.rs  mod.rs  sort.rs  take.rs
src/new_kernels/aggregate/: count.rs  minmax.rs  mod.rs  sum.rs
src/new_kernels/writers/: array_writer.rs  bool_writer.rs  dict_writer.rs  mod.rs  ree_writer.rs  str_writer.rs  view_writer.rs
src/writers/: array_writer.rs  bool_writer.rs  mod.rs  str_writer.rs
tests/: test_agg.rs  test_apply.rs  test_bitmap.rs  test_bounds.rs  test_cast.rs  test_cast_prim.rs  test_concat.rs  test_filter.rs  test_fixed_size_list_nonprimitive.rs  test_hash.proptest-regressions  test_hash.rs  test_interleave.rs  test_iter.rs  test_list_len.rs  test_list_select.rs  test_neg.rs  test_partition.rs  test_prim_arr_arr.rs  test_prim_arr_sca.rs  test_range.rs  test_reductions.rs  test_ree.rs  test_segfaults.rs  test_sort.rs  test_sort_norm.rs  test_string.rs  test_take.rs  test_vec.rs
