[package]
name = "arrow-compile-compute"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0-prefer-static"] }
arrow-schema = "55.1"
arrow-buffer = "55.1"
arrow-data = "55.1"
arrow-array = "55.1"
ouroboros = "0.18"
half = "2.4.1"
enum-as-inner = "0.6.1"
repr_offset = { version = "0.2.2", features = ["derive"] }
itertools = "0.13.0"


[dev-dependencies]
half = "2.4.1"
arrow-ord = "55.1"
arrow-cast = "55.1"
arrow-select = "55.1"
arrow-string = "55.1"
arrow-arith = "55.1"
criterion = "0.5"
fastrand = "2.2.0"
itertools = "0.13.0"
proptest = "1.5"
rayon = "1.10"
#chrono = "= 0.4.39"

[profile.release]
debug = true

[[bench]]
name = "eq_const_bench"
harness = false


[[bench]]
name = "cast_bench"
harness = false

[[bench]]
name = "parallel_bench"
harness = false

[[bench]]
name = "dsl_bench"
harness = false

[[bench]]
name = "take_bench"
harness = false

[[bench]]
name = "filter_bench"
harness = false
