[package]
name = "arrow-compile-compute"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
arrow-schema = "55.2"
arrow-buffer = "55.2"
arrow-data = "55.2"
arrow-array = "55.2"
ouroboros = "0.18"
half = { version = "2.4", features = ["bytemuck"] }
enum-as-inner = "0.6.1"
repr_offset = { version = "0.2.2", features = ["derive"] }
itertools = "0.13.0"
cardinality-estimator = "1.0.2"
bytemuck = { version = "1.23", features = ["extern_crate_alloc"] }
thiserror = "2.0.12"
strum = "0.27.2"
strum_macros = "0.27.2"

[dev-dependencies]
float-ord = "0.3.2"
half = "2.4.1"
arrow-ord = "55.2"
arrow-cast = "55.2"
arrow-select = "55.2"
arrow-string = "55.2"
arrow-arith = "55.2"
criterion = "0.5"
fastrand = "2.2.0"
itertools = "0.13.0"
proptest = "1.5"
rayon = "1.10"
#chrono = "= 0.4.39"

[profile.release]
debug = true

[[bench]]
name = "eq_const_bench"
harness = false


[[bench]]
name = "cast_bench"
harness = false

[[bench]]
name = "parallel_bench"
harness = false

[[bench]]
name = "compile_bench"
harness = false

[[bench]]
name = "take_bench"
harness = false

[[bench]]
name = "filter_bench"
harness = false

[[bench]]
name = "sort_bench"
harness = false


[[bench]]
name = "concat_bench"
harness = false
