[package]
name = "arrow-compile-compute"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
arrow-schema = "59.1"
arrow-buffer = "59.1"
arrow-data = "59.1"
arrow-array = "59.1"
ouroboros = "0.18"
half = { version = "2.4", features = ["bytemuck"] }
enum-as-inner = "0.6.1"
enum_dispatch = "0.3.13"
repr_offset = { version = "0.2.2", features = ["derive"] }
itertools = "0.13.0"
bytemuck = { version = "1.23", features = ["extern_crate_alloc"] }
thiserror = "2.0.12"
strum = "0.27.2"
strum_macros = "0.27.2"
memchr = "2.7.6"
paste = "1.0.15"
num-rational = { version = "0.4.2" }
lincomdb = { git = "https://github.com/RyanMarcus/lincomdb" }

[dev-dependencies]
float-ord = "0.3.2"
half = "2.4.1"
arrow-ord = "59.1"
arrow-cast = "59.1"
arrow-select = "59.1"
arrow-string = "59.1"
arrow-arith = "59.1"
criterion = "0.5"
fastrand = "2.2.0"
itertools = "0.13.0"
proptest = "1.10"
rayon = "1.10"
#chrono = "= 0.4.39"

[profile.release]
debug = true

[[bench]]
name = "eq_const_bench"
harness = false


[[bench]]
name = "cast_bench"
harness = false

[[bench]]
name = "parallel_bench"
harness = false

[[bench]]
name = "compile_bench"
harness = false

[[bench]]
name = "take_bench"
harness = false

[[bench]]
name = "take_fsl_bool_bench"
harness = false

[[bench]]
name = "filter_bench"
harness = false

[[bench]]
name = "sort_bench"
harness = false


[[bench]]
name = "concat_bench"
harness = false

[[bench]]
name = "hash_bench"
harness = false

[[bench]]
name = "lognull_bench"
harness = false

[[bench]]
name = "vec_bench"
harness = false

[[bench]]
name = "bounds_bench"
harness = false
